# ChangeLog for dev-ruby/flay
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*flay-1.4.0 (05 Nov 2009)

  05 Nov 2009; Hans de Graaff <graaff@gentoo.org> +flay-1.4.0.ebuild,
  +metadata.xml:
  Initial import.
