@@ -2,13 +2,14 @@
 Hash: SHA1
 
 DIST flay-1.4.0.gem 10752 RMD160 4d46387745cbfb4cdd87617ecca2167787537cba SHA1 9a41bdccdc36aa2026c24b4a6e390cd00e0369e0 SHA256 197407a485772e667764779fd449606e8ed17f15cff1e19e1ea01b6b7966bcd2
+EBUILD flay-1.4.0-r1.ebuild 713 RMD160 58695df98983fa2d3d9c2e6df85ef6e38c57a5a4 SHA1 1a6664e89412d0900312f8ca3d5e71aaa7665b11 SHA256 cae9bcc65be436208664567230408d4a155fa8ba9620f7529c6a5364c262d473
 EBUILD flay-1.4.0.ebuild 491 RMD160 b64fd1a8dcdb2931cc6efd1e92ab21dbbca9945a SHA1 ba7faf2bb6e1fff319ee0e1c9953318171cc8b64 SHA256 82f78075b997e9ca846493096c2717d9eee8180f794f3649191005337057115c
-MISC ChangeLog 247 RMD160 c11dd5bc725f91646c6d6314d1687adfe30c8465 SHA1 5c5dcdd8a5cd8336a7b568859807c43fd7edc91e SHA256 b6319380ec6cef442f29a19f9877015d9e46a60f6a9ffa8ef448dd245849d94e
+MISC ChangeLog 472 RMD160 df38c64d6cbe381c04a9d7075176db01fba01e2d SHA1 7ab0f0c4b12141927a840430b7890c93c7ad2704 SHA256 ac508e9b366007b29ea8e6915ae3a4aaadfe4e97fabdc790f3adfdab2099c57e
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkry+D4ACgkQVYU2Ai8K93f3mACgodGZa0ZsWwtwfXTOGEDyE6MZ
-EGAAmwfenIm1XMYIVJLJlakerrThNR9U
-=Yu47
+iEYEARECAAYFAks4hQQACgkQeM7EJeUH71MzNACfcoCRrCLmM5UTuWiaChh6PvKk
+AZAAn31yGegLYlN8ULwvDpectI45gXlC
+=7YTK
 -----END PGP SIGNATURE-----
