@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*flay-1.4.0-r1 (28 Dec 2009)
+
+  28 Dec 2009; Hans de Graaff <graaff@gentoo.org> +flay-1.4.0-r1.ebuild:
+  Convert to ruby-fakegem. Specs fail, revisit later. Drop x86 keyword since
+  dependencies have not been keyworded yet.
+
 *flay-1.4.0 (05 Nov 2009)
 
   05 Nov 2009; Hans de Graaff <graaff@gentoo.org> +flay-1.4.0.ebuild,
